# srs-skills

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPENDENCIES.md  PROJECT_BRIEF.md  README.md  SETUP_GUIDE.md  TECH_STACK.md  pyproject.toml  skill_overview.md  tmp_line_numbers.py
.claude/: settings.local.json
.github/: copilot-instructions.md
00-meta-initialization/: README.md  SKILL.md
01-initialize-srs/: SKILL.md  init_skill.py
01-strategic-vision/: README.md
02-context-engineering/: logic.prompt
02-requirements-engineering/: README.md
03-descriptive-modeling/: README.md  SKILL.md  descriptive_modeling.py
03-design-documentation/: README.md
04-development-artifacts/: README.md
04-interface-specification/: README.md  SKILL.md  interface_specification.py
05-feature-decomposition/: feature_decomposition.py
05-testing-documentation/: README.md
06-deployment-operations/: README.md
06-logic-modeling/: SKILL.md  logic.prompt
07-agile-artifacts/: README.md
07-attribute-mapping/: SKILL.md
08-end-user-documentation/: README.md
08-semantic-auditing/: logic.prompt  semantic_auditing.py
09-governance-compliance/: README.md
docs/: 2026-03-15-book-analysis-adjei-winston.md  2026-03-15-book-analysis-cunningham-business-style.md  2026-03-15-book-analysis-disciplined-agile-wow.md  2026-03-15-book-analysis-grubb-takang-maintenance.md  2026-03-15-book-analysis-rex-black-testing.md  2026-03-15-pmbok7-bookofforms-analysis.md  2026-04-13-book-driven-gap-closure.md  API.md  CHANGELOG.md  DATABASE.md  (+17 more)
(+2113 files in other folders)
