[project]
name = "srs-skills-engine"
version = "0.1.0"
description = "Validation kernel for srs-skills project workspaces."
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "ruamel.yaml>=0.18",
  "mistune>=3.0",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[project.scripts]
srs-engine = "engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
addopts = "-q --strict-markers --cov=engine --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*"]
